--- a/packages/@luke-ui/react/src/theme/__fixtures__/v2-goldens/tactile.v2.css
+++ b/packages/@luke-ui/react/src/theme/__fixtures__/v2-goldens/tactile.v2.css
@@ -87,7 +87,7 @@
 	--luke-color-text-secondary: oklch(0.49 0 0);
 	--luke-color-text-disabled: oklch(0.735 0 0);
 	--luke-color-border-decorative: oklch(0.875 0 0);
-	--luke-color-border-control: oklch(0.82 0 0);
+	--luke-color-border-control: oklch(0.6525 0 0);
 	--luke-color-border-focus: oklch(0.55 0.17 255);
 	--luke-color-intent-neutral-surface-subtle: oklch(0.955 0 0);
 	--luke-color-intent-neutral-surface-subtle-hover: oklch(0.933 0 0);
@@ -147,7 +147,7 @@
 		--luke-color-text-secondary: oklch(0.76 0.0083 210);
 		--luke-color-text-disabled: oklch(0.5 0.0117 210);
 		--luke-color-border-decorative: oklch(0.378 0.0087 210);
-		--luke-color-border-control: oklch(0.43 0.0099 210);
+		--luke-color-border-control: oklch(0.5325 0.0099 210);
 		--luke-color-border-focus: oklch(0.72 0.13 255);
 		--luke-color-intent-neutral-surface-subtle: oklch(0.29 0.0042 210);
 		--luke-color-intent-neutral-surface-subtle-hover: oklch(0.315 0.006 210);
@@ -209,7 +209,7 @@
 	--luke-color-text-secondary: oklch(0.49 0 0);
 	--luke-color-text-disabled: oklch(0.735 0 0);
 	--luke-color-border-decorative: oklch(0.875 0 0);
-	--luke-color-border-control: oklch(0.82 0 0);
+	--luke-color-border-control: oklch(0.6525 0 0);
 	--luke-color-border-focus: oklch(0.55 0.17 255);
 	--luke-color-intent-neutral-surface-subtle: oklch(0.955 0 0);
 	--luke-color-intent-neutral-surface-subtle-hover: oklch(0.933 0 0);
@@ -270,7 +270,7 @@
 	--luke-color-text-secondary: oklch(0.76 0.0083 210);
 	--luke-color-text-disabled: oklch(0.5 0.0117 210);
 	--luke-color-border-decorative: oklch(0.378 0.0087 210);
-	--luke-color-border-control: oklch(0.43 0.0099 210);
+	--luke-color-border-control: oklch(0.5325 0.0099 210);
 	--luke-color-border-focus: oklch(0.72 0.13 255);
 	--luke-color-intent-neutral-surface-subtle: oklch(0.29 0.0042 210);
 	--luke-color-intent-neutral-surface-subtle-hover: oklch(0.315 0.006 210);
